
WIP      [MANUALS] When displaying manuals use cached extracted images if they exist.

WIP      [MANUALS] Progress bar when extracting PDF pages.

WIP      [MANUALS] Support for CBZ/CBR manuals.
         Wait until this is implemented in AEL and then port it from AEL into AML?


[B]Advanced MAME Launcher | version 0.9.9 | XX February 2019[/B]

FEATURE  [CORE] Configuring every DAT and INI file one by one is tedious. Instead, define
         a directory where the DATs must be placed and pick the files from there automatically.

WIP      [CORE] At least two directories for samples are needed. MAME includes a default samples
         directory with some samples used by some machines. Both directories must be configured
         in mame.ini in order to get all the samples working.

WIP      [CORE] Implement the "Read-only launchers". ROL are XML files that include the
         launcher information as well as the ROMs information. ROLs are generated with AML,
         can be exported as XML and then used with AEL. AEL will trear ROLs are read-only
         (cannot be edited). If a ROL should be changed, then the XML is edited or regenerated
         and then imported again into AML.


[B]Advanced MAME Launcher | version 0.9.8 | 23 June 2018[/B]

FEATURE  [DOCS] Documentation in README.md improved.

FEATURE  [LEIA] Kodi Leia will cache the Python interpreter which means submodules will only
         be executed once and cached. sys.argv must be propagated from the entry point code
         into the submodules.
         See https://github.com/xbmc/xbmc/pull/13814
         and https://forum.kodi.tv/showthread.php?tid=303073&pid=2729071#pid2729071

FIX      Changed source code files to remove BOM. This is necessary to pass Travis tests of
         Kodi official repo.

FIX      ActivateWindow(busydialog) and Dialog.Close(busydialog) have been deprecated.
         Use DialogProgress() for all operations.
         See https://github.com/xbmc/xbmc/pull/13958